--- a/plugins/gatsby-source-cocktaildb/package.json
+++ b/plugins/gatsby-source-cocktaildb/package.json
@@ -15,6 +15,7 @@
   "license": "0BSD",
   "dependencies": {
     "axios": "^0.27.2",
-    "gatsby-source-filesystem": "^4.14.0"
+    "gatsby-source-filesystem": "^4.14.0",
+    "html-to-text": "^8.2.0"
   }
 }
