--- a/plugins/gatsby-theme-cocktail/package.json
+++ b/plugins/gatsby-theme-cocktail/package.json
@@ -8,13 +8,15 @@
     "gatsby": "^4.0.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@mdx-js/react": "v1",
+    "@babel/preset-react": "^7.18.6",
+    "@compiled/babel-plugin": "^0.16.0",
+    "@compiled/react": "^0.11.0",
+    "@compiled/webpack-loader": "^0.9.0",
+    "babel-preset-gatsby": "^2.17.0",
     "gatsby": "^4.16.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-robots-txt": "^1.7.1",
     "gatsby-plugin-sitemap": "^5.16.0",
-    "gatsby-plugin-theme-ui": "^0.14.6",
     "gatsby-theme-minimal": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
